force-app/main/default/objects/vehicle_crew__c/vehicle_crew__c.object-meta.xml
<CustomObject>
    <label>vehicle crew</label>
    <nameField>
        <label>vehicle crew Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>vehicle crews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>