force-app/main/default/objects/vehicle_crew__c/fields/Driver__c.field-meta.xml
<CustomField>
    <fullName>Driver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Driver</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>vehicle crews</relationshipLabel>
    <relationshipName>vehicle_crews</relationshipName>
    <type>Lookup</type>
</CustomField>