force-app/main/default/objects/vehicle_crew__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Executive</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>vehicle crews (Executive)</relationshipLabel>
    <relationshipName>vehicle_crews1</relationshipName>
    <type>Lookup</type>
</CustomField>