force-app/main/default/objects/vehicle_crew__c/fields/vehicle_crew__c.field-meta.xml
<CustomField>
    <fullName>vehicle_crew__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>vehicle crew</label>
    <referenceTo>Vehicle__c</referenceTo>
    <relationshipLabel>vehicle crews</relationshipLabel>
    <relationshipName>vehicle_crews</relationshipName>
    <type>Lookup</type>
</CustomField>