force-app/main/default/objects/vehicle_crew__c/fields/vehicle_crew_Id__c.field-meta.xml
<CustomField>
    <fullName>vehicle_crew_Id__c</fullName>
    <label>vehicle crew Id</label>
    <type>AutoNumber</type>
</CustomField>